Bug 12384 - h8300 assembler fails to assemble constants
Summary: h8300 assembler fails to assemble constants
Status: VERIFIED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-10 23:11 UTC by Mike Frysinger
Modified: 2011-01-20 19:57 UTC (History)
1 user (show)

See Also:
Host: x86_64-linux-gnu
Target: h8300-elf
Build:
Last reconfirmed:


Attachments
Fix constant check (312 bytes, patch)
2011-01-20 12:46 UTC, Nick Clifton
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Frysinger 2011-01-10 23:11:15 UTC
with current CVS, `make check-sim` fails for h8300 targets due to assembler errors.  an example from the log:

Testing div.s on machine h8300h.
Executing on host: .../gas/as-new .../sim/testsuite/sim/h8300/div.s --defsym sim_cpu=1 -I.../sim/testsuite/sim/h8300  -o div.s.o    (timeout = 300)
spawn .../gas/as-new .../sim/testsuite/sim/h8300/div.s --defsym sim_cpu=1 -I.../sim/testsuite/sim/h8300 -o div.s.o
.../sim/testsuite/sim/h8300/div.s: Assembler messages:
.../sim/testsuite/sim/h8300/div.s:249: Warning: operand #0xfffffffffffff000 out of range.
assembler output is:
.../sim/testsuite/sim/h8300/div.s: Assembler messages:
.../sim/testsuite/sim/h8300/div.s:249: Warning: operand #0xfffffffffffff000 out of range.
.../sim/testsuite/sim/h8300/div.s: Assembler messages:
.../sim/testsuite/sim/h8300/div.s:249: Warning: operand #0xfffffffffffff000 out of range.
FAIL: h8300h div.s (assembling)

all i did was checkout cvs and run:
./configure --target=h8300-elf
make all-sim
make check-sim
Comment 1 Nick Clifton 2011-01-20 12:46:46 UTC
Created attachment 5203 [details]
Fix constant check
Comment 2 Sourceware Commits 2011-01-20 12:49:10 UTC
CVSROOT:	/cvs/src
Module name:	src
Changes by:	nickc@sourceware.org	2011-01-20 12:49:05

Modified files:
	gas            : ChangeLog 
	gas/config     : tc-h8300.c 

Log message:
	PR gas/12384
	* config/tc-h8300.c (constant_fits_width_p): Use correct type for
	comparison.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gas/ChangeLog.diff?cvsroot=src&r1=1.4393&r2=1.4394
http://sourceware.org/cgi-bin/cvsweb.cgi/src/gas/config/tc-h8300.c.diff?cvsroot=src&r1=1.64&r2=1.65
Comment 3 Nick Clifton 2011-01-20 12:50:35 UTC
Hi Mike,

  I am going to check in the uploaded patch to fix this PR.

Cheers
  Nick

gas/ChangeLog
2011-01-20  Nick Clifton  <nickc@redhat.com>

    PR gas/12384
    * config/tc-h8300.c (constant_fits_width_p): Use correct type for
    comparison.
Comment 4 Mike Frysinger 2011-01-20 19:57:25 UTC
thanks ... `make check-sim` now pass for me