	PR gas/12384 	* config/tc-h8300.c (constant_fits_width_p): Use correct type for 	comparison.